--- a/css/index.css
+++ b/css/index.css
@@ -1,58 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  font-family: "Montserrat", sans-serif;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-button {
-  background-color: transparent;
-  border: 0;
-  cursor: pointer;
-}
-
-:root {
-  --cor1: #ff9a6c;
-  --cor2: #ff9a6c40;
-  --cor3: #263238;
-  --cor4: #000;
-  --cor5: #fff;
-  --cor6: #ff725e;
-}
-
-h1,
-h2 {
-  font-size: 3.2rem;
-  font-weight: 600;
-  line-height: 110%;
-}
-
-.container {
-  width: 100%;
-  max-width: 1230px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
-
 header {
   width: 100%;
   height: 8rem;
@@ -87,6 +32,10 @@ header .menu ul li a {
 
 header .menu ul li a:hover {
   opacity: 0.7;
+}
+
+header .hamburger {
+  display: none;
 }
 
 .s-hero {
@@ -271,7 +220,7 @@ header .menu ul li a:hover {
 }
 
 .s-faq .duvida p {
-  padding: 2.3rem;
+  padding: 0 2.3rem;
   text-align: justify;
   color: var(--cor3);
   font-size: 1.6rem;
@@ -281,15 +230,26 @@ header .menu ul li a:hover {
   border-bottom: 0.1rem solid #ff725e;
   border-left: 0.1rem solid #ff725e;
   margin-top: -0.5rem;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: 0.3s ease;
+}
+
+.s-faq .duvida.ativa p {
+  height: fit-content;
+  opacity: 1;
+  padding: 2.3rem;
 }
 
 footer {
   margin-top: 12.8rem;
   background-color: var(--cor2);
+  padding: 64px 0;
 }
 
 footer .container {
-  padding: 6.4rem;
+  /* padding: 6.4rem 0; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -330,31 +290,167 @@ footer .right .list ul li a {
   font-size: 1.6rem;
   line-height: 150%;
   padding-bottom: 1.6rem;
-  transition: opacity 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 footer .right .list ul li a:hover {
   opacity: 0.7;
+  text-decoration: underline;
 }
 
-footer .rodape {
+.rodape {
   text-align: center;
-  padding-block: 29px;
+  padding: 29px 0;
   background-color: var(--cor3);
 }
 
-footer .rodape p {
+.rodape p {
   color: var(--cor5);
   font-size: 1.6rem;
-  line-height: 150%; 
+  line-height: 150%;
 }
 
-footer .rodape a {
+.rodape a {
   color: var(--cor5);
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
-footer .rodape a:hover {
+.rodape a:hover {
   text-decoration: underline;
   color: #ff725e;
+}
+
+/* RESPONSIVIDADE */
+
+@media (max-width: 1200px) {
+  .s-hero .info .buttons {
+    flex-direction: column;
+    align-items: baseline;
+  }
+  .s-hero::before {
+    display: none;
+  }
+  .s-clinic {
+    padding-top: 10rem;
+  }
+  .s-faq {
+    padding-top: 10rem;
+  }
+  .s-faq .container {
+    flex-direction: column;
+  }
+  .s-faq .duvidas h2 {
+    text-align: center;
+  }
+  footer .container {
+    flex-direction: column;
+  }
+  footer .left {
+    text-align: center;
+    padding-bottom: 32px;
+  }
+  footer .right {
+    flex-direction: column;
+    text-align: center;
+    gap: 3.2rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .s-hero .container {
+    flex-direction: column;
+  }
+  .s-hero .info .buttons {
+    align-items: center;
+  }
+  .s-hero .info h1 {
+    padding-top: 46px;
+  }
+  .s-clinic .container {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+  }
+  header .hamburger {
+    display: block;
+  }
+  .s-hero .info h1 {
+    text-align: center;
+    font-size: 28px;
+  }
+  .s-hero .info p {
+    font-size: 16px;
+  }
+  .s-clinic .info h1 {
+    font-size: 28px;
+  }
+  .s-clinic .info p {
+    font-size: 16px;
+  }
+  .s-clinic .info ul li {
+    font-size: 16px;
+  }
+  .s-shop h1 {
+    font-size: 28px;
+  }
+  .s-shop p {
+    font-size: 16px;
+  }
+  .s-faq .duvida img {
+    left: 1.6rem;
+  }
+  .s-faq .duvida h3 {
+    padding: 2.3rem 2.3rem 2.3rem 4.5rem;
+  }
+  .s-faq .duvidas h2 {
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 560px) {
+  .s-hero .info h1 {
+    text-align: center;
+    font-size: 20px;
+  }
+  .s-hero .info p {
+    font-size: 14px;
+  }
+  .s-clinic .info h1 {
+    font-size: 20px;
+    text-align: center;
+  }
+  .s-clinic .info p {
+    font-size: 14px;
+  }
+  .s-clinic .info ul li {
+    font-size: 14px;
+  }
+  .s-shop h1 {
+    font-size: 20px;
+  }
+  .s-shop p {
+    font-size: 14px;
+  }
+  .s-shop .container {
+    padding-top: 10rem;
+  }
+  .s-faq .duvida h3 {
+    font-size: 14px;
+  }
+  .s-faq .duvidas h2 {
+    font-size: 20px;
+  }
+  footer .left p {
+    font-size: 1.4rem;
+  }
+  footer .right .list ul li a {
+    font-size: 1.4rem;
+  }
+  .rodape p {
+    font-size: 14px;
+  }
 }
